--- a/html/educacion.html
+++ b/html/educacion.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width" scalable="no">  
 <link href="../css/style.css" type="text/css" rel=stylesheet />    
-<title>Hoja de Vida / Educación</title>
+<title>Hoja de Vida / Educacion</title>
 </head>
 
 <body>   
